--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+compiz-plugins-livewallpapers (0.0.1-0ubuntu1~ppa2) maverick; urgency=low
+
+  * Updated rules file.
+
+ -- Pal Dorogi <pal.dorogi@gmail.com>  Fri, 08 Oct 2010 23:19:15 +1100
+
 compiz-plugins-livewallpapers (0.0.1-0ubuntu1~ppa1) maverick; urgency=low
 
   * Initial package.
