--- a/po/ru_RU.po
+++ b/po/ru_RU.po
@@ -9,81 +9,81 @@ msgstr ""
 "Report-Msgid-Bugs-To:https://bugs.launchpad.net/~ilap\n"
 "POT-Creation-Date: 2010-10-07 18:10+1100\n"
 "PO-Revision-Date: 2010-10-07 19:33+1100\n"
-"Last-Translator: Pal Dorogi <pal.dorogi@gmail.com>\n"
-"Language-Team: en_GB <pal.dorogi@gmail.com>\n"
+"Last-Translator: Romek Marszcziwski <marszcziwski@gmail.com>\n"
+"Language-Team: uk_UA <marszcziwski@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Pootle 1.1.0\n"
 
 msgid  "Galaxy Live Wallpaper"
-msgstr "Galaxy Live Wallpaper"
+msgstr "Живые обои Galaxy"
 
 msgid  "Galaxy Live Wallpaper for Compiz"
-msgstr "Galaxy Live Wallpaper for Compiz"
+msgstr "Живые обои Galaxy для Compiz"
 
 msgid  "Settings"
-msgstr "Settings"
+msgstr "Настройки"
 
 msgid  "Number Of Stars"
-msgstr "Number Of Stars"
+msgstr "Количество звёзд"
 
 msgid  "Number of stars (This has not been implemented yet)"
-msgstr "Number of stars (This has not been implemented yet)"
+msgstr "Количество звёзд (Это не было реализовано)"
 
 msgid  "Size Of Stars"
-msgstr "Size Of Stars"
+msgstr "Размер звёзд"
 
 msgid  "Size of stars"
-msgstr "Size of stars"
+msgstr "Размер звёзд"
 
 msgid  "Update Delay"
-msgstr "Update Delay"
+msgstr "Обновление задержки"
 
 msgid  "Delay in ms between screen updates. Example 1000ms/40ms = 25/sec"
-msgstr "Delay in ms between screen updates. Example 1000ms/40ms = 25/sec"
+msgstr "Задержка в мс между обновлением экрана. Пример 1000мс/40мс = 25/сек"
 
 msgid  "Draw Star streaks"
-msgstr "Draw Star streaks"
+msgstr "Прорисовка звезды с полосами"
 
 msgid  "Draw a Star with streaks"
-msgstr "Draw a Star with streaks"
+msgstr "Прорисовка звезды с полосами"
 
 msgid  "Rotation"
-msgstr "Rotation"
+msgstr "Вращения"
 
 msgid  "Rotate X"
-msgstr "Rotate X"
+msgstr "Вращение по оси X"
 
 msgid  "Rotate Galaxy through X coordinate"
-msgstr "Rotate Galaxy through X coordinate"
+msgstr "Вращение галактики по оси X"
 
 msgid  "Rotate Y"
-msgstr "Rotate Y"
+msgstr "Вращение по оси Y"
 
 msgid  "Rotate Galaxy through Y coordinate"
-msgstr "Rotate Galaxy through Y coordinate"
+msgstr "Вращение галактики по оси Y"
 
 msgid  "Rotate Z"
-msgstr "Rotate Z"
+msgstr "Вращение по оси Z"
 
 msgid  "Rotate Galaxy through Z coordinate"
-msgstr "Rotate Galaxy through Z coordinate"
+msgstr "Вращение галактики по оси Z"
 
 msgid  "Zoom in/out"
-msgstr "Zoom in/out"
+msgstr "Увеличение +/-"
 
 msgid  "Zoom in and out"
-msgstr "Zoom in and out"
+msgstr "Увеличение +/-"
 
 msgid  "Key Bindings"
-msgstr "Key Bindings"
+msgstr "Сочетания клавиш"
 
 msgid  "Galaxy Live Wallpaper Toggle"
-msgstr "Galaxy Live Wallpaper Toggle"
+msgstr "Включить Живые обои Galaxy"
 
 msgid  "Galaxy Live Wallpaper toggle key"
-msgstr "Galaxy Live Wallpaper toggle key"
+msgstr "Клавиша включения Живых обоев Galaxy"
 
 msgid  "Offset X"
 msgstr "Offset X"
