--- a/po/uk_UA.po
+++ b/po/uk_UA.po
@@ -9,81 +9,81 @@ msgstr ""
 "Report-Msgid-Bugs-To:https://bugs.launchpad.net/~ilap\n"
 "POT-Creation-Date: 2010-10-07 18:10+1100\n"
 "PO-Revision-Date: 2010-10-07 19:33+1100\n"
-"Last-Translator: Pal Dorogi <pal.dorogi@gmail.com>\n"
-"Language-Team: en_GB <pal.dorogi@gmail.com>\n"
+"Last-Translator: Romek Marszcziwski <marszcziwski@gmail.com>\n"
+"Language-Team: uk_UA <marszcziwski@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Pootle 1.1.0\n"
 
 msgid  "Galaxy Live Wallpaper"
-msgstr "Galaxy Live Wallpaper"
+msgstr "Живі шпалери Galaxy"
 
 msgid  "Galaxy Live Wallpaper for Compiz"
-msgstr "Galaxy Live Wallpaper for Compiz"
+msgstr "Живі шпалери Galaxy для Compiz"
 
 msgid  "Settings"
-msgstr "Settings"
+msgstr "Налаштування"
 
 msgid  "Number Of Stars"
-msgstr "Number Of Stars"
+msgstr "Кількість зірок"
 
 msgid  "Number of stars (This has not been implemented yet)"
-msgstr "Number of stars (This has not been implemented yet)"
+msgstr "Кількість зірок (Це не було реалізовано)"
 
 msgid  "Size Of Stars"
-msgstr "Size Of Stars"
+msgstr "Розмір зірок"
 
 msgid  "Size of stars"
-msgstr "Size of stars"
+msgstr "Розмір зірок"
 
 msgid  "Update Delay"
-msgstr "Update Delay"
+msgstr "Оновлення затримки"
 
 msgid  "Delay in ms between screen updates. Example 1000ms/40ms = 25/sec"
-msgstr "Delay in ms between screen updates. Example 1000ms/40ms = 25/sec"
+msgstr "Затримка у мс між оновленням екрана. Приклад 1000мс/40мс = 25/сек"
 
 msgid  "Draw Star streaks"
-msgstr "Draw Star streaks"
+msgstr "Промальовування зірки зі смугами"
 
 msgid  "Draw a Star with streaks"
-msgstr "Draw a Star with streaks"
+msgstr "Промальовування зірки зі смугами"
 
 msgid  "Rotation"
-msgstr "Rotation"
+msgstr "Обертання"
 
 msgid  "Rotate X"
-msgstr "Rotate X"
+msgstr "Обертання по осі X"
 
 msgid  "Rotate Galaxy through X coordinate"
-msgstr "Rotate Galaxy through X coordinate"
+msgstr "Обертання галактики по осі X"
 
 msgid  "Rotate Y"
-msgstr "Rotate Y"
+msgstr "Обертання по осі Y"
 
 msgid  "Rotate Galaxy through Y coordinate"
-msgstr "Rotate Galaxy through Y coordinate"
+msgstr "Обертання галактики по осі Y"
 
 msgid  "Rotate Z"
-msgstr "Rotate Z"
+msgstr "Обертання по осі Z"
 
 msgid  "Rotate Galaxy through Z coordinate"
-msgstr "Rotate Galaxy through Z coordinate"
+msgstr "Обертання галактики по осі Z"
 
 msgid  "Zoom in/out"
-msgstr "Zoom in/out"
+msgstr "Збільшення +/-"
 
 msgid  "Zoom in and out"
-msgstr "Zoom in and out"
+msgstr "Збільшення +/-"
 
 msgid  "Key Bindings"
-msgstr "Key Bindings"
+msgstr "Сполучення клавіш"
 
 msgid  "Galaxy Live Wallpaper Toggle"
-msgstr "Galaxy Live Wallpaper Toggle"
+msgstr "Увімкнути Живі шпалери Galaxy"
 
 msgid  "Galaxy Live Wallpaper toggle key"
-msgstr "Galaxy Live Wallpaper toggle key"
+msgstr "Клавіша увімкнення Живих шпалер Galaxy"
 
 msgid  "Offset X"
 msgstr "Offset X"
